--- a/source/_posts/正则表达式语法.md
+++ b/source/_posts/正则表达式语法.md
@@ -1,5 +1,11 @@
-<br/>
-### 正则表达式语法
+---
+title: 正则表达式语法
+date: 3/10/2017 10:54:57 AM 
+categories:
+tags:
+     - 正则表达式
+     - 语法
+---
 	
 	模式：/a/i   a表示字母a i表示不区分大小写
 	
